--- a/Sort String/README
+++ b/Sort String/README
@@ -1,6 +1,5 @@
 Напишете програма, която прочита от клавиатурата цяло, положително число n <= 500, следвано от символен низ с точно n символа. След това тя трябва да извежда на екрана различните думи от низа, по една на ред, подредени лексикографски започвайки от най-малката. Всяка памет, която програмата използва, трябва да е динамично заделена с точни размер. Забранено е използването на библиотеки, различни от iostream.
-Приемаме, че думите са съставени само от малки и главни латински букви, а всички останали символи считаме за разделители между тях. При
-лексикографската наредба да се използва стандартната наредба на символите спрямо кодовата таблица, отчитайки, че главните букви са преди малките.
+Приемаме, че думите са съставени само от малки и главни латински букви, а всички останали символи считаме за разделители между тях. При лексикографската наредба да се използва стандартната наредба на символите спрямо кодовата таблица, отчитайки, че главните букви са преди малките.
 
 Пример:
 
@@ -25,4 +24,4 @@ the
 
 
 ========================================================================================================
-Забележка: В моята програма входа е само текст, а изхода са думите, подредени без нов ред и не сравнява коректно думи от вида: "test" и "the"!
+Забележка: В моята програма входа е само текст (без цяло число), а изхода са думите, подредени без нов ред и не сравнява коректно думи от вида: "test" и "the", а думи от вида: "one-word" приема като една дума!
