--- a/Writing Tools/README
+++ b/Writing Tools/README
@@ -6,7 +6,7 @@
 
 За всеки от класовете да се реализират:
   - Голяма четворка(там където е нужна);
-  - Подходящи Get/Set фунцкии за член-данните на класовете;
+  - Подходящи Get/Set функции за член-данните на класовете;
   - operator>> за вход от поток;
   - operator<< за изход от поток.
   
